<resources>
    <string name="app_name">Progetto_IUM</string>
    <string name="title_activity_home">Le tue prenotazioni</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_homepage1">Homepage1</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="editPic"><u><font color='grey'>Modifica foto</font></u></string>
    <string name="register"><u><font color='grey'>Registrati</font></u></string>
    <string name="login">ACCEDI</string>
    <string name="user">admin</string>

    <string name="cancel">Annulla</string>
    <string name="day">Giorno</string>
    <string name="courtName">Nome Campo</string>
    <string name="newRes">Nuova prenotazione</string>
    <string name="ok">OK</string>
    <string name="start">Ora inizio</string>
    <string name="end">Ora fine</string>
    <string name="empty">Svuota campo</string>

    <string name="name">Nome <font color="#CC0000">*</font></string>
    <string name="surname">Cognome <font color="#CC0000">*</font></string>
    <string name="mail">E-mail <font color="#CC0000">*</font></string>
    <string name="età">Età <font color="#CC0000">*</font></string>
    <string name="usern">Username <font color="#CC0000">*</font></string>
    <string name="password">Password <font color="#CC0000">*</font></string>
    <string name="phone">Telefono</string>
    <string name="begin">Aperto dalle</string>
    <string name="ends">alle</string>
    <string name="fields">Campi</string>
    <string name="price">Prezzo (€)</string>

    <string name="court_name">Nome</string>
    <string name="court_email">E-mail</string>

    <string name="desc">Drawer menù image</string>

    <string name="username">USERNAME</string>
    <string name="eta">ETA</string>
    <string name="email">EMAIL</string>
    <string name="sur_name">NOME COGNOME</string>

    <string name="propic">Immagine del profilo</string>
    <string name="drawer">Drawer icon</string>

    <string name="structlist">Elenco strutture</string>
    <string name="reservations">Le tue prenotazioni</string>
    <string name="delete">Bottone di eliminazione</string>

    <string name="errorName">Il campo Nome non può essere vuoto</string>
    <string name="errorSurname">Il campo Cognome non può essere vuoto</string>
    <string name="errorEmail">Il campo Email non può essere vuoto</string>
    <string name="errorAge">Il campo Età non può essere vuoto</string>
    <string name="errorUser">Il campo Username non può essere vuoto</string>
    <string name="errorPass">Il campo Password non può essere vuoto</string>

    <string name="favorites">Vista preferiti</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="forgot_username">Hai dimenticato lo username!</string>
    <string name="forgot_password">Hai dimenticato la password!</string>
    <string name="wrong_combo">Combinazione username o password errata!</string>

    <string name="null_field">------------</string>
    <string name="title_activity_confirm_reservation">Conferma prenotazione</string>
    <string name="title_activity_reservation_detail">Dettaglio prenotazione</string>

    <string name="confirmCancel">Vuoi revocare la prenotazione?</string>
</resources>