<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirm_reservation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ium.baratheon.progetto_ium.ConfirmReservationActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/title_activity_confirm_reservation"
        android:labelFor="@id/toolbar"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameLabel"
            android:text="@string/court_name"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mailLabel"
            android:text="@string/court_email"
            android:textSize="20sp"
            android:layout_below="@id/nameLabel"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mailText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:layout_below="@id/nameText"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneLabel"
            android:text="@string/phone"
            android:textSize="20sp"
            android:layout_below="@id/mailLabel"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:layout_below="@id/mailText"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dayLabel"
            android:text="@string/day"
            android:textSize="20sp"
            android:layout_below="@id/phoneLabel"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dayText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:layout_below="@id/phoneText"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startLabel"
            android:text="@string/start"
            android:textSize="20sp"
            android:layout_below="@id/dayLabel"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:layout_below="@id/dayText"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endLabel"
            android:text="@string/end"
            android:textSize="20sp"
            android:layout_below="@id/startLabel"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:layout_below="@id/startText"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceLabel"
            android:text="@string/price"
            android:textSize="20sp"
            android:layout_below="@id/endLabel"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:layout_below="@id/endText"
            android:layout_marginTop="30dp"/>

    </RelativeLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="65dp"
            android:layout_height="65dp"
            app:layout_anchorGravity="top|center_horizontal"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/btn_check_buttonless_on"
            android:id="@+id/confirmButton"
            android:tint="#FFFFFF"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/colorPrimaryDark"
            app:rippleColor="@color/colorPrimaryDark" />
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>