<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimaryLight"
    tools:context="com.ium.baratheon.progetto_ium.ReservationSearchResultActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_margin="3dp"
            android:background="@drawable/custom_item_list"
            android:backgroundTint="@color/colorPrimary">

            <TextView
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:text="@string/courtName"
                android:id="@+id/textCourt"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/editCourt"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignRight="@+id/textCourt"
                android:layout_alignEnd="@+id/textCourt"
                android:textColor="@color/white"
                android:text="@string/null_field"
                android:textAlignment="textEnd"
                android:gravity="center_vertical|end"/>

            <TextView
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:text="@string/day"
                android:id="@+id/textDay"
                android:layout_below="@+id/textCourt"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/editDay"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/editCourt"
                android:textColor="@color/white"
                android:text="@string/null_field"
                android:textAlignment="textEnd"
                android:gravity="center_vertical|end"/>

            <TextView
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:text="@string/start"
                android:id="@+id/textStart"
                android:layout_below="@+id/textDay"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/editStart"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/editDay"
                android:textColor="@color/white"
                android:text="@string/null_field"
                android:textAlignment="textEnd"
                android:gravity="center_vertical|end"/>

            <TextView
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:text="@string/end"
                android:id="@+id/textEnd"
                android:layout_below="@+id/textStart"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/editEnd"
                android:textColor="@color/white"
                android:text="@string/null_field"
                android:textAlignment="textEnd"
                android:gravity="center_vertical|end"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/editStart" />

        </RelativeLayout>
    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/reservationList"
        android:layout_marginTop="131dp"
        android:layout_alignParentTop="true"
        android:divider="@null"/>

</android.support.design.widget.CoordinatorLayout>
