<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.ium.baratheon.progetto_ium.NewReservationActivity">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar" />

        <TextView
            android:text="@string/newRes"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/drawer_item_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/ic_drawer"
            android:contentDescription="@string/desc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:id="@+id/courtNameLayout">

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/courtName"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:ems="7"
                android:id="@+id/courtNameLabel"
                android:textSize="18sp"
                android:gravity="center_vertical"/>

            <EditText
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:ems="7"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/courtNameText"
                android:gravity="end|center_vertical"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/emptyName"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/empty"
                android:gravity="center_vertical" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="150dp"
            android:id="@+id/dayLayout">

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:ems="7"
                android:id="@+id/dayLabel"
                android:text="@string/day"
                android:textSize="18sp"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="7"
                android:id="@+id/dayText"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:gravity="end|center_vertical"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/emptyDay"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/empty"
                android:gravity="center_vertical"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="220dp"
            android:id="@+id/startLayout">

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:ems="7"
                android:id="@+id/startLabel"
                android:text="@string/start"
                android:textSize="18sp"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="7"
                android:id="@+id/startText"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:gravity="end|center_vertical"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/emptyStart"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/empty"
                android:gravity="center_vertical"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="290dp"
            android:id="@+id/endLayout">

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:ems="7"
                android:id="@+id/endLabel"
                android:text="@string/end"
                android:textSize="18sp"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="7"
                android:id="@+id/endText"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:gravity="end|center_vertical"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:id="@+id/emptyEnd"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/empty"
                android:gravity="center_vertical"/>

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="@dimen/fab_margin"
            app:layout_anchorGravity="top|center_horizontal"
            app:srcCompat="@android:drawable/ic_search_category_default"
            android:id="@+id/searchButton"
            android:tint="#FFFFFF"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/colorPrimary"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/shadow"
            android:id="@+id/datePickerLayout"
            android:visibility="gone">

            <CalendarView
                android:layout_width="270dp"
                android:layout_height="400dp"
                android:id="@+id/calendarView"
                android:layout_gravity="center"
                android:background="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <Button
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:layout_marginRight="0dp"
                android:layout_marginEnd="0dp"
                android:layout_alignBottom="@+id/calendarView"
                android:layout_alignLeft="@+id/calendarView"
                android:layout_alignStart="@+id/calendarView"
                android:id="@+id/cancelCalendarButton"
                android:text="@string/cancel"
                android:background="@color/light_gray"/>

            <Button
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimaryLight"
                android:textColor="@color/white"
                android:id="@+id/okCalendarButton"
                android:text="@string/ok"
                android:layout_alignBottom="@+id/calendarView"
                android:layout_toRightOf="@id/cancelCalendarButton"
                android:layout_toEndOf="@id/cancelCalendarButton"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/shadow"
            android:visibility="gone"
            android:id="@+id/timePickerLayout">

            <TimePicker
                android:layout_width="270dp"
                android:layout_height="400dp"
                android:id="@+id/timePicker"
                android:layout_gravity="center"
                android:background="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:headerBackground="@color/colorPrimaryLight" />

            <Button
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:layout_marginRight="0dp"
                android:layout_marginEnd="0dp"
                android:layout_alignBottom="@+id/timePicker"
                android:layout_alignLeft="@+id/timePicker"
                android:layout_alignStart="@+id/timePicker"
                android:id="@+id/cancelButton"
                android:text="@string/cancel"
                android:background="@color/light_gray"/>

            <Button
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:background="@color/colorPrimaryLight"
                android:textColor="@color/white"
                android:id="@+id/okButton"
                android:text="@string/ok"
                android:layout_alignBottom="@+id/timePicker"
                android:layout_toRightOf="@id/cancelButton"
                android:layout_toEndOf="@id/cancelButton"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"/>

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_homepage">
        <include layout="@layout/nav_header"/>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
